sonar fixes added